--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "escape-game",
   "version": "0.1.0",
-  "homepage": "https://pokechirlia.github.io/EscapeGame",
+  "homepage": "https://pokechirlia.github.io/EscapeGame/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
