--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "escape-game",
   "version": "0.1.0",
-  "homepage": "https://pokechirlia.github.io/EscapeGame/",
+  "homepage": "https://pokechirlia.github.io/EscapeGame",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,7 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-	"predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
